--- a/index.html
+++ b/index.html
@@ -1,114 +1,139 @@
-<!doctype html>
-
-<html lang="en">
+<!DOCTYPE html>
+<html>
     <head>
-        <meta charset="utf-8">
-        <title>Test program</title>
-
-        <script src="http://yui.yahooapis.com/3.18.1/build/yui/yui-min.js"></script>
+        <title>Code review tools</title>
+        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>
 
         <style>
-            div.main {
-                overflow: hidden;
-                margin: 40px;
-                font-size: 24px;
+            body {
+                background-image: url("conceptos.png");
+                background-repeat: no-repeat;
+                background-size: 150px;
+            }
 
-                border: 1px solid black;
+            div.main {
+                margin: 30px;
+                font-size: 24px;
             }
 
             div.box {
                 margin: auto;
-                width: 60%;
                 padding: 10px;
+                width: 60%;
 
                 border: 1px solid green;
             }
+            h1,h2,h3,p {
+                margin: 5px;
+            }
+
             .centered {
                 margin: auto;
-                width: 40%;
                 text-align: center;
-                font-size: 36px;
+            }
+            .small {
+                font-size: 80%;
+            }
+            .narrow {
+                width: 50%;
             }
         </style>
-
-        <script src="//code.jquery.com/jquery-2.1.4.min.js"></script>
-
     </head>
 
-    <body>
+    <body ng-app="fisken">
+
+        <div ng-controller="fiskenController" ng-cloak>
 
         <div class='main'>
-            <div id='box' class="box">
+
+            <div      ng-if='inRange( 0)' id='slide0' class="box">
+                <span><h2 class="centered narrow">Process, goals, benefits, culture, background</h2></span>
+                </br>
+                </br>
+                <span><h2 class="centered narrow">Tools</h2></span>
             </div>
+
+
+            <div      ng-if='inRange( 1,10)' id='slide1' class="box">
+                <span                       ><p>Tools should not dictate how we work</p></span>
+                <span ng-if='inRange( 2,10)'><p>Really learn your tools</p></span>
+                <span ng-if='inRange( 3,10)'><p>Source control</p></span>
+                <span ng-if='inRange( 4)'   ><ul><li>Exceptionally important</li></ul></span>
+                <span ng-if='inRange( 5)'   ><ul><li>Rewriting history is a revelation</li></ul></span>
+                <span ng-if='inRange( 6,10)'><p>Review tool</p></span>
+                <span ng-if='inRange( 7)'   ><ul><li>Create review (automatic?)</li></ul></span>
+                <span ng-if='inRange( 8)'   ><ul><li>Commenting, bug creation</li></ul></span>
+                <span ng-if='inRange( 9)'   ><ul><li>Fixing, affirming, closing</li></ul></span>
+                <span ng-if='inRange(10)'   ><ul><li>Statistics and other stuff, less important!</li></ul></span>
+            </div>
+
+
+            <div      ng-if='inRange(11,12)' id='slide2' class="box centered">
+                <span><h3>Branch, check-in, review, merge</h3></span>
+                <span><p>Code collaborator, Crucible, Upsource</p></span>
+                <span><h3>Create merge request</h3></span>
+                <span><p>Github, Stash</p></span>
+                <span><h3>Stage before commit</h3></span>
+                <span><p class='small'>(take over source repo)</p></span>
+                <span><p>Gerrit</p></span>
+                </br>
+            </div>
+
+
+            <div      ng-if='inRange(13)' id='slide3' class="box">
+                <p>finished</p>
+            </div>
+
         </div>
 
-        <script>
-            (function() {
-                var fisken = '';
-
-                var step = 0;
-                var steps = [
-                    {forward_append: '<div class="centered">Process, goals, benefits, culture, background</div></br><div class="centered">Tools</div>'},
-                    {forward_append: '<p>Tools affect how you work</p>', forward_hide: 0},
-                    {forward_append: '<p>Really lear your tools</p>'},
-                    {forward_append: '<p>Source control</p>'},
-                    {forward_append: '<ul><li>Exceptionally important</li></ul>'},
-                    {forward_append: '<ul><li>Rewriting history is a revelation</li></ul>', forward_hide: 4},
-                    {forward_append: '<p>hei 4</p>', forward_hide: 5},
-                    {forward_append: '<p>hei 5</p>', forward_hide: 2},
-                    {forward_append: '<p>hei 6</p>', forward_hide: 3},
-                    {forward_append: '<p>finished</p>'}
-                ];
-
-                function backward(step, action) {
-                    var list = $('#list');
-                    if (action.hasOwnProperty('forward_append')) {
-                        $("#step-" + step).remove();
-                    }
-                    if (action.hasOwnProperty('forward_hide')) {
-                        $("#step-" + action.forward_hide).show();
-                    }
-                }
-
-                function forward(step, action) {
-                    var box = $('#box');
-                    if (action.hasOwnProperty('forward_append')) {
-                        box.append("<span id='step-" + step + "'>" + steps[step].forward_append + "</span>");
-                    }
-                    if (action.hasOwnProperty('forward_hide')) {
-                        $("#step-" + action.forward_hide).hide();
-                    }
-                }
-
-                function checkKey(e) {
-                    e = e || window.event;
-
-                    if (e.keyCode == '37') {
-                        console.log("left arrow " + step);
-                        var action = steps[step-1];
-                        if (action) {
-                            step--;
-                            backward(step, action);
-                        }
-                    } else if (e.keyCode == '39') {
-                        console.log("right arrow " + step);
-                        var action = steps[step];
-
-                        if (action) {
-                            forward(step, action);
-                            step++;
-                        }
-                    }
-                }
-
-                document.onkeydown = checkKey;
-                forward(step, steps[0]);
-                step++;
-
-                console.log('hei ' + fisken);
-
-            }());
-        </script>
+        </div><!-- end root div -->
 
     </body>
+
+
+    <script>
+    "use strict";
+
+    angular.module("fisken", ['ng']) // dependencies
+        .controller("fiskenController", function($scope, $http, $location) {
+
+            $scope.slide = parseInt($location.hash().substring(6)) || 0;
+
+            $scope.inRange = function(start, end) {
+                return true;
+                if (end === undefined) return $scope.slide === start;
+                return start <= $scope.slide && $scope.slide <= end;
+            }
+
+            function forward() {
+                //if ($scope.slide > 0) {
+
+                $scope.slide++;
+                $location.hash('slide-' + $scope.slide);
+                console.log("forward  " + $scope.slide);
+            }
+
+            function backward() {
+                if ($scope.slide <= 0) return;
+
+                $scope.slide--;
+                $location.hash('slide-' + $scope.slide);
+                console.log("backward " + $scope.slide);
+            }
+
+            function checkKey(e) {
+                e = e || window.event;
+
+                if (e.keyCode == '37') {
+                    $scope.$apply(backward());
+                } else if (e.keyCode == '39') {
+                    $scope.$apply(forward());
+                }
+            }
+            document.onkeydown = checkKey;
+
+        });
+
+    </script>
+
 </html>
