--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <span ng-if='inRange( 4, 4)'><ul><li>Always pays off</li></ul></span>
                 <span ng-if='inRange( 4, 4)'><ul><li>Feeling of mastery</li></ul></span>
                 <span ng-if='inRange( 5,-1)'><p>What tools do we need</p></span>
-                <span ng-if='inRange( 5)'   ><ul><li>Can do code reviews with diff and email</li></ul></span>
+                <span ng-if='inRange( 5)'   ><ul><li>Can do code reviews with <em>diff</em> and <em>email</em></li></ul></span>
                 <span ng-if='inRange( 6)'   ><ul><li>Source control</li></ul></span>
                 <span ng-if='inRange( 6)'   ><ul><li>Build tool</li></ul></span>
                 <span ng-if='inRange( 6)'   ><ul><li>Automatic build system</li></ul></span>
@@ -132,7 +132,7 @@
                 </div>
                 <span                       ><p>The Github model</p></span>
                 <span                       ><p>Perfect for open source projects (no need for push rights)</p></span>
-                <span ng-if='inRange(28,-1)'><p>Work flow</p></span>
+                <span ng-if='inRange(28,-1)'><p>Work flow (fairly automated)</p></span>
                 <span ng-if='inRange(28,-1)'><ul><li>Feature branches</li></ul></span>
                 <span ng-if='inRange(28,-1)'><ul><li>One review (pull request) pr branch</li></ul></span>
                 <span ng-if='inRange(28,-1)'><ul><li>All new commits (updates) to the same branch goes into the review</li></ul></span>
@@ -162,7 +162,7 @@
                 <span ng-if='inRange(36,-1)'><p><em>"We don't have time to do code reviews"</em></p></span>
                 </br>
                 <span ng-if='inRange(36,-1)'><p><b>Reviews is supposed to be a bit of a hassle.</b></p></span>
-                <span ng-if='inRange(36,-1)'><ul><li>Slowing down the developement process means you take the time to do things properly</li></ul></span>
+                <span ng-if='inRange(36,-1)'><ul><li>Slowing down the development process means you take the time to do things properly</li></ul></span>
                 </br>
                 <span ng-if='inRange(36,-1)'><p>What do you think would be the biggest gain from doing code review?</p></span>
                 <span ng-if='inRange(36,-1)'><p>What is keeping your team from doing code reviews?</p></span>
